--- a/source/CloudSurvey/Web.config
+++ b/source/CloudSurvey/Web.config
@@ -11,9 +11,9 @@
    <system.web>
         <customErrors mode="Off"/>
     </system.web>
-  <connectionString>
-    <add name="Server=tcp:itbserver.database.windows.net,1433;Initial Catalog=itbserver;Persist Security Info=False;User ID=briankelly90@live.co.uk;Password=manunited1990;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;" />
-  </connectionString>
+  <connectionStrings>
+    <add connectionString="Server=tcp:itbserver.database.windows.net,1433;Initial Catalog=itbserver;Persist Security Info=False;User ID=briankelly90@live.co.uk;Password=manunited1990;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;" />
+  </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="2.0.0.0" />
     <add key="webpages:Enabled" value="false" />
