--- a/source/CloudSurvey/Web.config
+++ b/source/CloudSurvey/Web.config
@@ -12,7 +12,7 @@
         <customErrors mode="Off"/>
     </system.web>
   <connectionStrings>
-    <add connectionString="Server=tcp:itbserver.database.windows.net,1433;Initial Catalog=itbserver;Persist Security Info=False;User ID=briankelly90@live.co.uk;Password=manunited1990;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;" />
+    <add name="Server=tcp:itbserver.database.windows.net,1433;Initial Catalog=itbserver;Persist Security Info=False;User ID=briankelly90@live.co.uk;Password=manunited1990;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="2.0.0.0" />
