--- a/source/CloudSurvey/Web.config
+++ b/source/CloudSurvey/Web.config
@@ -13,7 +13,7 @@
     </system.web>
   <connectionStrings>
     <connectionString>
-      <add name="Server=tcp:itbserver.database.windows.net,1433;Initial Catalog=itbserver;Persist Security Info=False;User ID=briankelly90@itbserver.database.windows.net;Password=manunited1990;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;" />
+      <add name="Server=tcp:itbserver.database.windows.net,1433;Initial Catalog=itbserver;Persist Security Info=False;UserID=batman;Password=123456Joker*;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;" />
      </connectionString>
   </connectionStrings>
   <appSettings>
